# hkws_cap_py

./: .gitignore  CMakeLists.txt  README.md  hkws_cap_demo.py  hkws_cap_imp.py  hkws_cap_py.py  hkws_imp.cpp  hkws_imp.h  hkws_py.cpp  hkws_py.h
ineed/hkws/: hkwsConfig.cmake
ineed/hkws/include/: PlayM4.h
